[package]
name = "node-cli"
version = "2.0.0"
authors = ["Starkley Tech <support@starkleytech.com>"]
description = "SwapDEX node implementation in Rust."
build = "build.rs"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "swapdex"
homepage = "https://swapdex.network"
repository = "https://github.com/Swapdex-Protocol/swapdex-node/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "swapdex"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
clap = { version = "3.0", features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde_json = '1.0'
serde = { version = "1.0.126", features = ["derive"] }
futures = { version = "0.3.16", features = ["compat"] }
hex-literal = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
parking_lot = "0.11.1"
async-trait = "0.1"

# primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false}
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# frontier primitives
fp-consensus = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }
fp-rpc = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }

# client dependencies
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-client-db = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-service = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# frontier client dependencies
fc-consensus = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }
fc-rpc = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }
fc-rpc-core = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }
fc-db = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }
fc-mapping-sync = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }

# frame dependencies
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false}
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# frontier frame dependencies
pallet-evm = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }
pallet-ethereum = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }
pallet-dynamic-fee = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }
pallet-base-fee = { git = "https://github.com/starkleytech/frontier",  branch = "polkadot-v0.9.18" }

# node-specific dependencies
swapdex-runtime = { version = "2.0.0", path = "../runtime" }
node-rpc = { version = "2.0.0", path = "../rpc" }
node-primitives = { version = "2.0.0", path = "../primitives" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# CLI-specific dependencies
sc-cli = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
frame-benchmarking-cli = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
node-inspect = { version = "0.8.0", optional = true, path = "../inspect" }

[target.'cfg(target_arch="x86_64")'.dependencies]
sc-cli = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", features = [ "wasmtime" ] }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false, features = [ "wasmtime" ] }

[dev-dependencies]
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-service-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
remote-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

futures = "0.3.16"
tempfile = "3.1.0"
assert_cmd = "1.0"
nix = "0.19"
serde_json = "1.0"
regex = "1"
platforms = "1.1"
tokio = { version = "1.15", features = ["macros", "time"] }

[build-dependencies]
substrate-build-script-utils = { optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

[features]
default = [ "cli" ]
cli = [
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"sc-service/db",
	"clap",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"swapdex-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
