[package]
name = "node-rpc-client"
version = "2.0.0"
authors = ["Starkley Tech <support@starkleytech.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://swapdex.network"
repository = "https://github.com/Swapdex-Protocol/swapdex-node/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.16"
jsonrpc-core-client = { version = "18.0.0", default-features = false, features = ["http"] }
log = "0.4.8"
node-primitives = { version = "2.0.0", path = "../primitives" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
