[package]
authors = ['Swapdex']
description = 'Swapdex Claims Module'
edition = '2018'
homepage = 'https://gitlab.starkleytech.com/swapdex-chain/swapdex-node'
license = 'Apache 2.0'
name = 'pallet-claims'
repository = 'https://gitlab.starkleytech.com/swapdex-chain/swapdex-node'
version = '3.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']



[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }



# Substrate dependencies
frame-benchmarking = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", optional = true}
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
hex = {default-features = false, version = "0.4.2"}
hex-literal = '0.3.1'
lazy_static = {features = ['spin_no_std'], version = "1.4.0"}
rustc-hex = {version = '2.1.0', default-features = false}
serde = {optional = true, version = '1.0.101', features = ['derive']}
sp-io = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# Local dependencies
primitives = { default-features = false, package = 'node-primitives', path = '../../primitives', version = '2.0.0'}

# ORML dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "2b5d4ce1d08fb54c0007c2055653892d2c93a92e", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "2b5d4ce1d08fb54c0007c2055653892d2c93a92e", default-features = false }
orml-utilities = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "2b5d4ce1d08fb54c0007c2055653892d2c93a92e", default-features = false }


[dev-dependencies]
hex-literal = '0.3.1'
pallet-balances = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sp-core = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'orml-traits/std',
  'orml-tokens/std',
  'orml-utilities/std',
  'primitives/std',
  'rustc-hex/std',
  'serde/std',
]
